<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/register_account"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/signup_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:onClick="userRegister"
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/register" />

    <TextView
        android:id="@+id/txtLoginIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/account_login"
        android:textAllCaps="true"
        android:textSize="15sp" />
</LinearLayout>