<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/get_started_here"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/signup_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="Username or Password is Incorrect!"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:visibility="gone"
        android:textSize="10sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-condensed"
        android:onClick="userLogin"
        android:text="@string/login" />

    <TextView
        android:id="@+id/txtSignedUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/account_register"
        android:textAllCaps="true"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="Forgot Password"
        android:textAllCaps="true"
        android:textSize="15sp" />
</LinearLayout>