<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hunter_green"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.HomeScreenActivity">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/hunter_green_deep"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="15dp"
        android:text="Welcome, Kenny!"
        android:textSize="30sp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    style="@style/button_homepage"
                    android:layout_width="300dp"
                    android:layout_height="600dp"
                    android:drawableTop="@drawable/speaker_notes"
                    android:onClick="showNoteActivity"
                    android:text="@string/notes" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    style="@style/button_homepage"
                    android:layout_width="300dp"
                    android:layout_height="600dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/quiz"
                    android:onClick="showQuizActivity"
                    android:text="@string/quiz" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:onClick="showSettingActivity"
                    style="@style/button_homepage"
                    android:layout_width="300dp"
                    android:layout_height="600dp"
                    android:drawableTop="@drawable/manage_accounts"
                    android:text="@string/settings" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    style="@style/button_homepage"
                    android:layout_width="300dp"
                    android:layout_height="600dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/more_vert"
                    android:onClick="showOtherActivity"
                    android:text="@string/others" />
            </FrameLayout>

        </LinearLayout>

    </HorizontalScrollView>
</LinearLayout>